# term-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs  compose.yaml  install.sh  package-lock.json  package.json  tsconfig.client.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
deploy/: term-server.service
integrations/claude/.claude-plugin/: plugin.json
integrations/claude/hooks/: hooks.json
integrations/codex/.codex-plugin/: plugin.json
integrations/codex/hooks/: hooks.json
integrations/pi/: package.json
integrations/pi/extensions/: term-server-agent-events.ts
release/: public-key.txt
scripts/: package-release.sh  release-metadata.mjs
skills/term-server-artifacts/: SKILL.md
skills/term-server-artifacts/agents/: openai.yaml
skills/term-server-artifacts/scripts/: create_artifact.py
src/: agent_events.rs  agent_integrations.rs  ai.rs  api.rs  artifacts.rs  auth.rs  broker.rs  build.rs  config.rs  files.rs  lib.rs  main.rs  terminal.rs  tls.rs  update.rs  workspace.rs
src/client/: App.tsx  index.html  main.tsx  styles.css
src/client/components/: ArtifactDrawer.tsx  ChangePassword.tsx  FileExplorer.tsx  Login.tsx  ProcessInspector.tsx  ResourceTabs.tsx  ResourceWorkspace.tsx  SettingsWorkspace.tsx  Sidebar.tsx  TermServerLogo.tsx  TerminalPane.tsx  WelcomeSection.tsx  WorkingDuration.tsx
src/client/lib/: agent-activity.test.ts  agent-activity.ts  agent-attention.test.ts  agent-attention.ts  agent-status.test.ts  agent-status.ts  api.ts  artifacts.test.ts  artifacts.ts  browser-credentials.test.ts  browser-credentials.ts  document-title.test.ts  document-title.ts  file-links.test.ts  file-links.ts  layout.test.ts  layout.ts  mobile-terminal.test.ts  mobile-terminal.ts  notifications.test.ts  notifications.ts  process-inspector.test.ts  process-inspector.ts  pwa.test.ts  pwa.ts  resources.ts  sidebar-width.test.ts  sidebar-width.ts  terminal-kill.test.ts  terminal-kill.ts  terminal-zoom.test.ts  terminal-zoom.ts  tree.test.ts  tree.ts  (+4 more)
src/shared/: types.ts
(+1 files in other folders)
