[package]
name = "term-server"
version = "0.4.0"
edition = "2024"
description = "A fast, secure, web-based terminal workspace"
license = "MIT"
repository = "https://github.com/Agusx1211/term-server"
rust-version = "1.88"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["json", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base64 = "0.22.1"
bytes = "1.11.1"
clap = { version = "4.6.3", features = ["derive", "env"] }
ed25519-dalek = { version = "2.2.0", features = ["pem", "pkcs8"] }
flate2 = "1.1.9"
futures-util = "0.3.32"
hmac = "0.12.1"
http-body-util = "0.1.4"
hyper = { version = "1.11.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
ignore = "0.4.31"
mime_guess = "2.0.5"
parking_lot = "0.12.5"
percent-encoding = "2.3.2"
portable-pty = "0.9.0"
rand = "0.9.2"
rcgen = "0.14.8"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "stream"] }
rustls = { version = "0.23.42", default-features = false, features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tar = "0.4.46"
thiserror = "2.0.18"
time = "0.3.54"
tempfile = "3.27.0"
tokio = { version = "1.53.1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29.0"
tower-http = { version = "0.7.0", features = ["catch-panic", "compression-full", "fs", "request-id", "set-header", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.24.0", features = ["serde", "v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1.1.4", features = ["process"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
debug = 1
